syntax = "proto3";

package tieba.pbPage;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.pbPage";

import "AppPosInfo.proto";
import "AppTransmitData.proto";
import "CommonRequest.proto";
import "PbPage/AdParam.proto";

message PbPageRequestData {
  optional int32 pb_rn = 1;
  int32 mark = 2;
  optional int32 back = 3;
  int64 kz = 4;
  int32 lz = 5;
  int32 r = 6;
  optional int64 pid = 7;
  int32 with_floor = 8;
  int32 floor_rn = 9;
  optional int32 weipost = 10;
  int32 message_id = 11;
  optional int32 s_model = 12;
  int32 rn = 13;
  int32 scr_w = 14;
  int32 scr_h = 15;
  double scr_dip = 16;
  int32 q_type = 17;
  int32 pn = 18;
  string st_type = 19;
  optional int32 thread_type = 20;
  optional int32 banner = 21;
  int32 arround = 22;
  int32 last = 23;
  string msg_click = 24;
  CommonRequest common = 25;
  string lastids = 26;
  string st_from = 27;
  string st_link = 28;
  int32 st_stat = 29;
  int64 st_task = 30;
  int32 issdk = 31;
  string query_word = 32;
  optional int32 is_comm_reverse = 33;
  optional int32 is_jumpfloor = 34;
  optional int32 jumpfloor_num = 35;
  string da_idfa = 42;
  string platform = 43;
  uint64 jid = 44;
  uint64 fid = 45;
  string jfrom = 46;
  string yuelaou_locate = 47;
  string yuelaou_params = 48;
  optional string obj_source = 50;
  optional string obj_locate = 51;
  optional string obj_param1 = 52;
  AppPosInfo app_pos = 53;
  optional uint32 from_smart_frs = 54;
  string feed_nid = 55;
  optional int64 forum_id = 56;
  optional int32 need_repost_recommend_forum = 57;
  AdParam ad_param = 58;
  int32 need_log = 59;
  string call_url = 60;
  string shoubai_cuid = 61;
  string ori_ugc_nid = 62;
  string ori_ugc_tid = 63;
  optional int32 ori_ugc_type = 65;
  string ori_ugc_vid = 66;
  string ad_context_list = 68;
  string up_schema = 69;
  optional int32 from_push = 71;
  string ad_ext_params = 72;
  optional int64 broadcast_id = 73;
  int32 floor_sort_type = 74;
  int32 source_type = 75;
  optional int32 immersion_video_comment_source = 76;
  AppTransmitData app_transmit_data = 77;
  optional int32 is_fold_comment_req = 78;
  optional int32 is_edit_comment_req = 79;
  optional int32 request_times = 80;
  optional int64 last_pid = 81;
  optional int32 similar_from = 82;
  string come_from = 83;
  string search_query = 84;
}
