syntax = "proto3";

import "AnchorInfo.proto";
import "PrivSets.proto";
import "PostInfoContent.proto";
import "PbContent.proto";
import "Abstract.proto";
import "Media.proto";
import "PollInfo.proto";
import "VideoInfo.proto";
import "Agree.proto";
import "OriginThreadInfo.proto";
import "AlaLiveInfo.proto";
import "ZhiBoInfoTW.proto";
import "Quote.proto";
import "Voice.proto";
import "DealInfo.proto";
import "BaijiahaoInfo.proto";
import "Item.proto";
import "PbLinkInfo.proto";
import "HeadItem.proto";
import "MultipleForum.proto";
import "LbsInfo.proto";
import "UserPostPerm.proto";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message PostInfoList {
  uint64 forum_id = 1;
  uint64 thread_id = 2;
  uint64 post_id = 3;
  uint32 is_thread = 4;
  uint32 create_time = 5;
  string forum_name = 6;
  string title = 7;
  repeated PostInfoContent content = 8;
  string content_thread = 9;
  string user_name = 10;
  string ip = 11;
  uint32 is_post_deleted = 12;
  string ptype = 13;
  string _abstract = 14;
  repeated Abstract abstract_thread = 15;
  repeated Media media = 16;
  uint32 reply_num = 17;
  int64 user_id = 18;
  string user_portrait = 19;
  string post_type = 20;
  LbsInfo lbs_info = 21;
  Quote quote = 22;
  repeated Voice voice_info = 23;
  AnchorInfo anchor_info = 24;
  int32 hide_post = 25;
  uint64 thread_type = 26;
  ZhiBoInfoTW twzhibo_info = 27;
  PollInfo poll_info = 28;
  VideoInfo video_info = 29;
  bool is_deal = 30;
  DealInfo deal_info = 31;
  repeated MultipleForum multiple_forum_list = 32;
  int32 freq_num = 33;
  uint64 v_forum_id = 34;
  string name_show = 35;
  AlaLiveInfo ala_info = 36;
  int32 agree_num = 37;
  int32 view_num = 38;
  int32 share_num = 39;
  Agree agree = 40;
  int32 is_remain = 41;
  OriginThreadInfo origin_thread_info = 42;
  int32 is_view_year = 43;
  int32 is_share_thread = 44;
  repeated PbContent rich_title = 45;
  repeated PbContent rich_abstract = 46;
  int32 is_ntitle = 47;
  string article_cover = 48;
  repeated PbContent first_post_content = 49;
  BaijiahaoInfo baijiahao_info = 50;
  string wonderful_post_info = 51;
  Item item = 52;
  repeated HeadItem item_star = 53;
  repeated PbLinkInfo pb_link_info = 54;
  //  repeated PbGoodsInfo pb_goods_info = 55;
  repeated PrivSets priv_sets = 56;
  int32 is_author_view = 57;
  //  WorksInfo works_info = 58;
  int32 is_manager = 59;
  int32 is_origin_manager = 60;
  int32 good_types = 61;
  int32 top_types = 62;
  UserPostPerm user_post_perm = 63;
  //  VoiceRoom voice_room = 64;
  string target_scheme = 66;
}