syntax = "proto3";

package tieba.profile;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.profile";

import "CommonRequest.proto";

message ProfileRequestData {
    optional int64 uid = 1;
    uint32 need_post_count = 2;
    optional int64 friend_uid = 3;
    uint32 is_guest = 4;
    string st_type = 5;
    uint32 pn = 6;
    uint32 rn = 7;
    uint32 has_plist = 8;
    CommonRequest common = 9;
    uint32 scr_w = 10;
    uint32 scr_h = 11;
    uint32 q_type = 12;
    double scr_dip = 13;
    int32 is_from_usercenter = 14;
    int32 page = 15;
    string friend_uid_portrait = 16;
    string history_forum_ids = 17;
    string history_forum_names = 18;
    int32 need_usergrowth_task = 19;
}
